--- a/styles.css
+++ b/styles.css
@@ -5,17 +5,6 @@
 body { background:#EBEBEB; font:16px "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; color:#333; }
 .step { width:1280px; margin:0 auto 24px auto; text-align:left; font-size: 36px}
 
-div#thank-you img{
-  min-height:120%;
-  min-width:120%;
-  height:auto;
-  width:auto;
-  position:absolute;
-  top:-110%; bottom:-110%;
-  left:-110%; right:-110%;
-  margin:auto;
-}
-
 
 div#me img{
   position:absolute;
@@ -61,7 +50,20 @@ div#plotly-reg img {
   box-shadow: 10px 10px 5px #888888;
 }
 
+div#treemap img {
+  border: 3px solid #CCC;
+  box-shadow: 10px 10px 5px #888888;
+}
 
+div#linear img {
+  border: 3px solid #CCC;
+  box-shadow: 10px 10px 5px #888888;
+}
+
+div#prophet img {
+  border: 3px solid #CCC;
+  box-shadow: 10px 10px 5px #888888;
+}
 
 div#pandas-concept img{
   position:absolute;
